<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">quiz-app</string>
    <string name="project_name">Quiz App</string>
  <string name="kitap">Kitaplar</string>
    <string name="cat">Akylly çat</string>
    <string name="formula">Formulalar</string>
    <string name="sozluk">Sözlük</string>
    <string name="zehin">Zehin bäsleşigi</string>
    <string name="barada">Barada</string>
    <string name="gozle">Gözleg....</string>
    <string name="matem">Matematika</string>
    <string name="fizika">Fizika</string>
    <string name="himiya">Himiýa</string>
  <string name="gozletm">Gözleg (en⇄tm)</string>
  <string name="informatika">Informatika</string>
  <string name="english">Iňlis dili</string>
  <string name="taryh">Taryh</string>
  <string name="umumy">Umumy</string>
  <string name="inlis">Iňlisçe :</string>
  <string name="turkmen">Türkmençe :</string>
  <string name="okalys">Okalyşy :</string>
  <string name="Aboutapp">Programma barada</string>
  <string name="aboutFull">Salam, Oguz Library programmany ýükläniňiz üçin size örän minnetdar.Bu programma Kitaplar, Akylly çat ,Zehin bäsleşigi, Formulalar we Sözlük ýaly toparlara bölünýar.Kitaplar bölüminde size peýdaly kitaplar goýuldy.Akylly çat bölüminde programmanyň boty siziň soraglaryňyza jogap berer we siziň bilmeýän zatlaryňyza kömek eder.Zehin bäsleşigi bölüminde siz öz zehiniňizi barlap görersiňiz, formulalar bölüminde gerekli bolan esasy formular ýerleşdirilen we Sözlük bölüminde iňlisçe türkmençe sözlükler goýuldy.</string>
  <string name="oguzhan">Türkmenistanyň Oguzhan adyndaky inžener tehnologiýalar uniwersiteti</string>
  <string name="duzen">Programmany düzen: Merdan Ysmaýylow</string>
  <string name="versia">Wersiýa 2.1</string>
  <string name="share">Paýlaşmak</string>
  <string name="tapylmady">Gözleýän zadyňyz tapylmady.</string>
  <string name="attention">Üns beriň</string>
  <string name="çykjakmy">Siz hakykatdanam, çykmak isleýärsiňizmi?</string>
  <string name="hawa">Hawa</string>
  <string name="yok">Ýok</string>
<string name="dowam">Dowam etmek</string>
  <string name="berekella">Berekella</string>
  <string name="gowy">Gowy netije</string>
  <string name="pes">Pes netije</string>
  <string name="restart">Täzeden başla</string>
  <string name="goybolsun">Goýbolsun et</string>
  <string name="netije">10 - soragyň </string>
  <string name="netije2"> - sanysyna dogry jogap berdiňiz.</string>
  <string name="netije3">- sanysyna ýalnyş jogap berdiňiz</string>

</resources>